fix: single selected text-overflow

--- a/src/components/dropdown-selector.less
+++ b/src/components/dropdown-selector.less
@@ -110,6 +110,11 @@
   .selector__single {
     padding-top: 4px;
     min-height: 24px;
+
+    .selector__option-text {
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
   }
 }
 
